--- a/sol.html
+++ b/sol.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<script language="javascript" src="linkedList.js"></script>
-		<script src="raphael-min.js"></script>
+		<script src="raph_full.js"></script>
 	</head>
 	<body>
 		<div id="gameTable"></div>
