--- a/sol.html
+++ b/sol.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 		<script language="javascript" src="linkedList.js"></script>
 		<script src="raph_full.js"></script>
 	</head>
